<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Indian Browser [Made in India]</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="webUrlCancel">Cancel</string>
    <string name="tools">Tools</string>
    <string name="refresh">Refresh</string>
    <string name="divider">Divide</string>
    <string name="search">Search</string>
    <string name="hisotry">History</string>
    <string name="deletefavorites">Delete Bookmark</string>
    <string name="deletehistory">Delete History</string>
    <string name="deleteAllHistory">Clear History</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="blank"> </string>
    <string name="phone">Phone:</string>
    <string name="email">Enail:</string>
    <string name="map">Map</string>
    <string name="picture">Picture</string>
    <string name="saveImage">Save picture</string>
    <string name="link">URL</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>
    <string name="filemanagerNewDirectory">New</string>
    <string name="fileName">Name:</string>
    <string name="savePath">Path:</string>
    <string name="defaultPath">/mnt/sdcard/webbrowserX/download/</string>
    <string name="deleteFolder">Delete</string>
    <string name="newNameForFolder">Rename</string>
    <string name="webPageTitle">Title:</string>
    <string name="currentPageUrl">Current URL</string>
    <string name="copy">Copy</string>
    <string name="returnStr">Back</string>
    <string name="pageAttr">Page attributes</string>
    <string name="pageSize">Page size:</string>
    <string name="choosedPictureURL">Picture URL</string>
    <string name="webUrlHint">URL</string>
    <string name="webUrlGoto">Go</string>
    <string name="favorite">Bookmark</string>
    <string name="modifyfavorites">Edit bookmark</string>
    <string name="viewImage">Show picture</string>
    <string name="viewImageAttributes">Show arrtibutes</string>
    <string name="filemanagerTitle">Choose path</string>
    <string name="filemanagerItemIcon">Icon</string>
    <string name="createNewFolder">New</string>
    <string name="currentPageEncoding">Page encode:</string>
    <string name="choosedLinkedURL">URL:</string>
    <string name="homepage">Homepage</string>
    <string name="open_link">Open link</string>
    <string name="copy_link">Copy link</string>
    <string name="Private_Mode">Private Mode</string>
    <string name="save_page">Save Page</string>
    <string name="bookmark">Bookmark</string>
    <string name="history">History</string>
    <string name="capture_page">Capture page</string>
    <string name="capture_screen">Capture screen</string>
    <string name="edit_page">Edit page</string>


    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>

    <string name="downloads">Downloads</string>
    <string name="incognito">Incognito</string>
    <string name="theme">Theme</string>
    <string name="add_to_bookmark">Add to Bookmark</string>
    <string name="night">"Night Mode"</string>
    <string name="reload">Reload</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>

    ////browser
    <string name="activity_settings">Settings</string>
    <string name="toggle_tab_switcher_menu_item">Toggle switcher</string>
    <string name="remove_tab_menu_item">Remove tab</string>
    <string name="add_tab_menu_item">New tab</string>
    <string name="clear_tabs_menu_item">Clear all tabs</string>
    <string name="settings_menu_item">Settings</string>
    <string name="tab_title">Tab %1$d</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="removed_tab_snackbar">Removed %1$s</string>
    <string name="cleared_tabs_snackbar">Removed all tabs</string>
    <string name="undo">Undo</string>
    <string name="edit_text_hint">Text</string>
    <string name="empty_view_text">No tabs available</string>
    <string name="theme_preference_category_title">Theme</string>
    <string name="theme_preference_key">theme_preference_key</string>
    <string name="theme_preference_title">Theme</string>
    <string name="theme_preference_summary">Allows to choose the theme, which should be used by the example app</string>
    <string name="theme_preference_default_value">0</string>

    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="Opengames">Play Our Newly Launched Games and Earn Upto Rs 50,000</string>

</resources>
