<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/menuback1"
    android:background="@color/white">

<!--    <LinearLayout-->
<!--        android:id="@+id/tools_window_vertical"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        android:background="#EFEFF1"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_alignParentStart="true">-->

<!--        <Button-->
<!--            android:id="@+id/private_browsing"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/Private_Mode"-->
<!--            android:background="#EFEFF1"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:id="@+id/add_favorite_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/save_page"-->
<!--            android:background="#EFEFF1"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:id="@+id/show_favorite_button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/bookmark"-->
<!--            android:background="#EFEFF1"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/history"-->
<!--            android:background="#EFEFF1"-->
<!--            android:id="@+id/show_history_button"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/capture_page"-->
<!--            android:background="#EFEFF1"-->
<!--            android:id="@+id/page_screenshot"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/capture_screen"-->
<!--            android:background="#EFEFF1"-->
<!--            android:id="@+id/window_screenshot"/>-->

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:background="#C4C4C4"/>-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="36dp"-->
<!--            android:text="@string/edit_page"-->
<!--            android:background="#EFEFF1"-->
<!--            android:id="@+id/page_edit"/>-->

<!--    </LinearLayout>-->



    <LinearLayout
        android:id="@+id/menuback"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="-20dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/show_favorite_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/bookmark" />

            <ImageView
                android:id="@+id/show_history_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="4dp"
                android:src="@drawable/clock" />


            <ImageView
                android:id="@+id/downloadsbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/download" />

            <ImageView
                android:id="@+id/themesbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/shirt" />


            <ImageView
                android:id="@+id/sharebtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/share" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bookmark"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/downloads"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/theme"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/add_favorite_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:padding="11dp"
                    android:onClick="Open" />


            </LinearLayout>

            <ImageView
                android:id="@+id/nightmodebtnbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="11dp"
                />

            <ImageView
                android:id="@+id/reloadmenubtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="11dp"
                />


            <ImageView
                android:id="@+id/feedbackbtn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                />

            <ImageView
                android:id="@+id/private_browsing"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_to_bookmark"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:id="@+id/nighttxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/night"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reload"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/incognito"
                android:textAlignment="center"
                android:textSize="@dimen/menu_text_size" />

        </LinearLayout>

        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/settingsbtn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:padding="7dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <ImageView
                android:id="@+id/menudownbtn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:padding="7dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <ImageView
                android:id="@+id/exitbtn"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:padding="7dp"
                />


        </LinearLayout>

    </LinearLayout>



</LinearLayout>
